testdata/bad/timeToHoursWithNoZone.ion
// Minutes and timezone missing
1969-02-23T00
